# hybrid-flows

./: .dvcignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MLProject  README.md  README.org  Untitled.ipynb  best_params.json  conda_env.yaml  continue_hp.sh  dvc.yaml  environment.yaml  flowtorch.ipynb  hp.sh  hp_benchmark.sh  mlflow_command.sh  mlflow_data.csv  mlflowcache.py  multivariate_conditional.ipynb  multivariate_conditional_MNIST.ipynb  multivariate_copula.ipynb  multivariate_unconditional.ipynb  multivariate_unconditional_cleaned.ipynb  params.yaml  pyproject.toml  requirements.txt  requirements_additional.txt  requirements_tf.txt  sbatch_benchmark_seed.sh  sbatch_dvc_repro.sh  sbatch_malnutrition_seed.sh  sbatch_train_hybrid_models.sh  setup.py  slurm_dvc_exp.sh  slurm_sim_seeds.sh  study.pickle.bak  test  (+3 more)
.dvc/: config
.github/workflows/: docs.yaml  test.yaml
datasets/: .gitignore  bsds300_validate.npy.dvc  data.tar.gz.dvc  miniboone_test.npy.dvc  miniboone_train.npy.dvc  power_train.npy.dvc
datasets/benchmark/: bsds300_test.npy.dvc  gas_train.npy.dvc
datasets/bsds300/: BSDS300.hdf5.dvc
datasets/gas/: ethylene_CO.pickle.dvc
datasets/hepmass/: 1000_test.csv.dvc  1000_train.csv.dvc
datasets/miniboone/: data.npy.dvc
datasets/power/: data.npy.dvc
experiments/: .dvcignore  dvc.yaml  dvc_repro.sh  mlflow_command.sh  params.yaml  queue_benchmark_runs.sh  queue_malnutrition_runs.sh  queue_sim_runs.sh  run_benchmark_exps.sh  run_malnutrition_exps.sh  run_sim_exps.sh  sim_seeds.sh
experiments/datasets/: benchmark_stats
experiments/optuna/: parameter_space_definition_conditional_coupling_flow_bernstein_poly_sim_moons.yaml  parameter_space_definition_unconditional_benchmark_masked_autoregressive_flow_bernstein_poly_power.yaml  parameter_space_definition_unconditional_hybrid_coupling_flow_bernstein_poly_sim_circles.yaml  parameter_space_definition_unconditional_hybrid_coupling_flow_bernstein_poly_sim_moons.yaml  parameter_space_definition_unconditional_hybrid_pre_trained_coupling_flow_bernstein_poly_moons.yaml
experiments/scripts/: evaluate_benchmark.py  evaluate_benchmark_seed_runs.py  evaluate_benchmark_seed_runs_runtime.py  evaluate_benchmarks_code_cells.py  evaluate_malnutrition.py  evaluate_malnutrition_code_cells.py  evaluate_malnutrition_seed_runs.py  evaluate_malnutrition_seed_runs_runtime.py  evaluate_sim.py  evaluate_sim_eval_runs.py  evaluate_sim_seed_runs.py  evaluate_sim_seed_runs_runtime.py  get_hpo_table.py  optuna_new.py  run_optuna.sh  train.py
experiments/slurm/: sbatch_benchmark_seed.sh  sbatch_sim_seed.sh  slurm_benchmark_seeds.sh  slurm_sim_seeds.sh  slurm_train_hybrid_models.sh
ipynb/: Untitled.ipynb  flowtorch.ipynb  hp.ipynb  hp.py  interpretable.ipynb  load_model_checkpoints.ipynb  multivariate_conditional.ipynb  multivariate_conditional_MNIST.ipynb  multivariate_unconditional.ipynb
mlruns/0/: meta.yaml
optuna/: parameter_space_definition_unconditional_benchmark_masked_autoregressive_flow_bernstein_poly_hepmass.yaml  parameter_space_definition_unconditional_benchmark_masked_autoregressive_flow_power.yaml  parameter_space_definition_unconditional_hybrid_coupling_flow_sim_moons.yaml  parameter_space_definition_unconditional_hybrid_pre_trained_coupling_flow_moons.yaml  parameter_space_definition_unconditional_masked_autoregressive_flow_moons.yaml
org/: 20240322.org  20240416.org  notes.org  todo.org
params/benchmark/: dataset.yaml
params/malnutrition/: mctm.yaml
params/sim/: dataset.yaml
results/coupling_bernstein_flow_circles/: .gitignore
scripts/: copula.py  copula_thomas_nagler.py  demo.py  maf_colula.py  multivariate_unconditional.py  optuna_new.py  optuna_optim.py  run_optuna.sh  train.py  train_benchmark.py  train_hybrid.py  train_malnutrition.py
scripts/dev/: convert_params.yaml.py  copy_params.py  custom_ar_model.py  dbg.py  figures_2d_hybrid.py  interpret.py  interpret_1d_bimodal_affine.py  interpret_2d.py  interpret_malnutrition.py  interpret_malnutrition_new_nf_model.py  lr_scheduler.py  minimal_example_2d_hybrid.py  normalizing_flow.py  plain.py  plot_nn.py  simple_test.py  simple_test_benchmark.py  simple_test_hybrid.py  test_nf.py  train_maf.py
scripts/malnutrition/: interpret_hmabnf.py  interpret_marginals.py  interpret_mctm.py
src/hybrid_flows/: activations.py  distributions.py  models.py  nn.py  parameters.py
src/mctm/: __init__.py  activations.py  distributions.py  nn.py  (+6 more)
test/: conftest.py  test_distributions.py  test_models.py  test_nn.py
(+135 files in other folders)
