[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 61.0.0']

[project]
classifiers = [
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.8'
]
dependencies = [
  'bernstein_flow @ git+https://github.com/MArpogaus/TensorFlow-Probability-Bernstein-Polynomial-Bijector.git@70a7fa3',
  'tensorflow-datasets==4.9.*',
  'seaborn==0.13.*'
]
dynamic = ['version']
license = {text = 'TODO'}
name = 'mctm'
readme = 'README.md'
requires-python = '>=3.8.0'

[project.optional-dependencies]
develop = [
  'mctm[train]',
  'autoflake',
  'black',
  'isort',
  'pre-commit',
  'pytest',
  'python-lsp-black',
  'python-lsp-server[all]',
  'ipykernel',
  'tox'
]
optuna = [
  'mctm[train]',
  'optuna~=3.5.0',
  'optuna-integration~=3.5.0',
  'plotly~=5.18.0'
]
train = [
  'dvc[ssh]==3.30.*',
  'mlflow==2.8.*'
]

[tool.autoflake]
expand-star-imports = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
# line-length = 88
target-version = ['py38']

[tool.isort]
profile = 'black'

[tool.setuptools.dynamic]
version = {attr = 'mctm.__version__'}
