[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools >= 61", "setuptools_scm>=7"]

[project]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
  'bernstein_flow @ git+https://github.com/MArpogaus/TensorFlow-Probability-Bernstein-Polynomial-Bijector.git@3006ed8',
  'tensorflow-datasets==4.9.*',
  'tensorflow==2.16.*',
  'tensorflow_probability[tf]==0.24.*',
  'seaborn==0.13.*'
]
dynamic = ['version']
license = {text = 'TODO'}
name = 'mctm'
readme = 'README.md'
requires-python = '>=3.7.0'

[project.optional-dependencies]
develop = [
  'mctm[train]',
  'commitizen',
  'ipython',
  'pre-commit',
  'python-lsp-ruff',
  'python-lsp-server[all]',
  'ruff'
]
optuna = [
  'mctm[train]',
  'optuna~=3.5.0',
  'optuna-integration~=3.5.0',
  'plotly~=5.18.0'
]
train = [
  'dvc[ssh]==3.51.*',
  'mlflow==2.13.*'
]

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "scm"
version_scheme = "pep440"

[tool.ruff]
indent-width = 4
# Same as Black.
line-length = 88
# Assume Python 3.8
target-version = "py38"

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
ignore = []
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["I", "E", "F", "D"]
unfixable = []

[tool.setuptools_scm]
# https://stackoverflow.com/a/74404703
# omits local version, useful because pypi does not support it
local_scheme = "no-local-version"
